# AnciennesNouvelles

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.images  REVIEW.md  ROADMAP.md  SPEC.md  WTF-Explanations.txt  WTF.txt  alembic.ini  check_overrides.py  config.yml.example  docker-compose.yml  misc-commands.txt  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  test_image.py
.githooks/: pre-push
.github/workflows/: ci.yml
ancnouv/: __main__.py  config.py  config_loader.py  exceptions.py
ancnouv/bot/: __init__.py  bot.py  handlers.py  notifications.py
ancnouv/cli/: auth.py  escalation.py  fetch.py  generate.py  health.py  setup.py  test_commands.py
ancnouv/db/: cli.py  config_store.py  models.py  session.py  utils.py
ancnouv/fetchers/: __init__.py  base.py  gallica.py  rss.py  wikipedia.py
ancnouv/generator/: __init__.py  caption.py  image.py  selector.py  video.py
ancnouv/publisher/: __init__.py  facebook.py  image_hosting.py  instagram.py  reels.py  threads.py  token_manager.py
ancnouv/scheduler/: __init__.py  context.py  jobs.py
ancnouv/utils/: date_helpers.py  retry.py  text_helpers.py
dashboard/: Dockerfile  config_meta.py  db.py  main.py  requirements.txt
dashboard/routers/: config.py  overview.py  posts.py
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DASHBOARD.md  DATABASE.md  DATA_SOURCES.md  DEPLOYMENT.md  IMAGE_GENERATION.md  INSTAGRAM_API.md  SCHEDULER.md  TELEGRAM_BOT.md  TESTING.md
scripts/: check_events.py  check_overrides.py  refetch_all_events.py
tests/: conftest.py
(+46 files in other folders)
