[project]
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ancnouv"]
omit = [
    "ancnouv/db/migrations/*",
    "ancnouv/cli/*",
    "ancnouv/db/cli.py",
    "ancnouv/__main__.py",
    "ancnouv/publisher/image_hosting.py",
    "ancnouv/utils/retry.py",
    "ancnouv/scheduler/__init__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
